# Mineral_Circuit_Optimizer

./: .gitignore  CMakeLists.txt  README.md  REFERENCE.md
.github/workflows/: run_tests.yml
docs/: CCircuit_Document_Analysis.md  CSimulator_Document_and_Analysis.md  Challenge_Answer.ipynb  GeneticAlgorithm_Design_Document.md  GeneticAlgorithm_Params_Analysis.md
docs/doxygen/: Doxygen.config
docs/doxygen/html/: _c_circuit_8h.html  _c_circuit_8h__dep__incl.map  _c_circuit_8h__dep__incl.md5  _c_circuit_8h__incl.map  _c_circuit_8h__incl.md5  _c_circuit_8h_source.html  _c_circuit___document___analysis_8md.html  _c_simulator_8cpp.html  _c_simulator_8cpp__incl.map  _c_simulator_8cpp__incl.md5  _c_simulator_8cpp_a43f70be396ec43b828ae6b5f62663006_cgraph.map  _c_simulator_8cpp_a43f70be396ec43b828ae6b5f62663006_icgraph.map  _c_simulator_8cpp_a43f70be396ec43b828ae6b5f62663006_icgraph.md5  _c_simulator_8cpp_acbc4bfb123e20b7ef36ed74b7fee6fa3_icgraph.map  _c_simulator_8cpp_ad4677677b5efd8861d0740b098da12fd_cgraph.map  _c_simulator_8cpp_ad4677677b5efd8861d0740b098da12fd_cgraph.md5  _c_simulator_8cpp_ad821279bb28c56cb9612eedd11e7013f_icgraph.md5  _c_simulator_8h.html  _c_simulator_8h__dep__incl.map  _c_simulator_8h__dep__incl.md5  _c_simulator_8h__incl.map  _c_simulator_8h__incl.md5  _c_simulator_8h_a43f70be396ec43b828ae6b5f62663006_cgraph.md5  _c_simulator_8h_acbc4bfb123e20b7ef36ed74b7fee6fa3_icgraph.md5  _c_simulator_8h_source.html  (+620 more)
include/: CSimulator.h  Genetic_Algorithm.h
include/circuit/: CCircuit.h  CUnit.h
include/operators/: Operator.h
include/utils/: Helper.h  Individual.h  Parameter.h  tqdm.hpp
investigate/: CCircuit.cpp  evaluate_circuit.ipynb  evaluate_circuit_time.ipynb  execution_times.txt
post_process/: visualize.ipynb  visualize.py
presentation/: The Gerardium Rush pentlandite.pptx
scripts/: run.sh  run_test.sh
src/: CMakeLists.txt  CSimulator.cpp  Genetic_Algorithm.cpp  main.cpp
src/circuit/: CCircuit.cpp  CUnit.cpp
src/operators/Crossover/: PureSinglePointCrossover.cpp  TwoPointCrossover.cpp  UniformCrossover.cpp
src/operators/Mutation/: GenProgMutation.cpp  GuidedMutation.cpp
src/operators/Selection/: NaryTournamentSelection.cpp  RankSelection.cpp  RouletteWheelSelection.cpp
src/utils/: Helper.cpp
tests/: CMakeLists.txt  test_circuit_simulator.cpp  test_circuit_time.cpp  test_genetic_algorithm.cpp  test_validity_checker.cpp
(+464 files in other folders)
